# api/components/auth/controller.js
@@ -1,3 +1,6 @@
+const bcrypt = require('bcrypt')
+const nanoid = require('nanoid');
+
 const auth = require('../../../auth');
 
 const TABLE = 'auth';
@@ -6,27 +9,35 @@ const TABLE_USER = 'user';
 const controller = (injectdStore) => {
   const store = injectdStore || require('../../../store/dummy');
 
-  const getUsername = (username) => store.query(TABLE_USER, {username: username});
+  const getUsername = (username) => store.query(TABLE_USER, { username: username });
 
-  const login = async(username, password) => {
-    const data = await store.query(TABLE, {username: username});
-    if (data.length && data[0].password === password) {
-      console.log('aca');
-      const user = await getUsername(username);
-      console.log(user);
-      return auth.sign(user[0]);
-    }
-    throw new Error('Error');
+  const login = async (username, password) => {
+    return store.query(TABLE, { username: username })
+      .then((data) => {
+        if (data.length === 0) {
+          throw new Error('Error')
+        }
+        return bcrypt.compare(password, data[0].password)
+      }).then((isEquals) => {
+        if (isEquals) {
+          return getUsername(username);
+        } else {
+          throw new Error('Error');
+        }
+      }).then((user) => {
+        return auth.sign(user[0]);
+      });
+
   }
 
-  const insert = (body) => store.insert(TABLE, body);
+  const insert = async (body) => store.insert(TABLE, { username: body.username, password: await bcrypt.hash(body.password, 5), id: nanoid.nanoid() });
 
-  const update = async(body) => {
-    const data = await store.query(TABLE, {username: body.username});
+  const update = async (body) => {
+    const data = await store.query(TABLE, { username: body.username });
     return store.update(TABLE, {
       id: data[0].id,
       username: body.username || data[0].username,
-      password: body.password || data[0].password
+      password: body.password ? await bcrypt.hash(body.password, 5) : data[0].password
     });
   };
 
